--- a/FlashcardApp/FlashcardApp/ManageDeckPage.xaml
+++ b/FlashcardApp/FlashcardApp/ManageDeckPage.xaml
@@ -8,24 +8,35 @@
             <Label x:Name="DeckTitle"
                    Text="{Binding}"
                    TextColor="DarkSlateGray"
-                   HeightRequest="25" />
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"
+                   FontSize="30"
+                   FontAttributes="Bold"
+                   HeightRequest="50" />
             <Button x:Name="NewCardForDeck"
                 Text="Add Card"
                 TextColor="LightSalmon"
+                FontAttributes="Bold"
                 HeightRequest="100"
+                FontSize="20"
                 BackgroundColor="DarkSlateGray"
                 Clicked="NewCardForDeck_Clicked"/>
             <Button x:Name="GoBackToDeck"
                 Text="Back To Deck"
                 TextColor="LightSalmon"
+                FontAttributes="Bold"
                 HeightRequest="100"
+                FontSize="20"
                 BackgroundColor="DarkSlateGray"
                 Clicked="GoBackToDeck_Clicked"/>
             <Label x:Name="CardsTitle"
                    Text="Cards in Deck"
                    TextColor="DarkSlateGray"
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="End"
                    FontSize="Medium"
-                   HeightRequest="25"
+                   FontAttributes="Bold"
+                   HeightRequest="50"
                    IsVisible="True"/>
 
             <ListView x:Name="CardsListView"
