--- a/FlashcardApp/FlashcardApp/PracticeDeckPage.xaml
+++ b/FlashcardApp/FlashcardApp/PracticeDeckPage.xaml
@@ -4,9 +4,40 @@
              x:Class="FlashcardApp.PracticeDeckPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Button x:Name="GoBackToDeck"
+                Text="Back To Deck"
+                TextColor="LightSalmon"
+                FontAttributes="Bold"
+                HeightRequest="100"
+                FontSize="20"
+                BackgroundColor="DarkSlateGray"
+                Clicked="GoBackToDeck_Clicked"/>
+
+            <Label x:Name="DeckTitle"
+                   Text="{Binding}"
+                   TextColor="DarkSlateGray"
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"
+                   FontSize="30"
+                   FontAttributes="Bold"
+                   HeightRequest="50" />
+
+            <Button x:Name="CardFrontName"
+                   Text="{Binding}"
+                   TextColor="DarkSlateGray"
+                   FontSize="30"
+                   FontAttributes="Bold"
+                   HeightRequest="50"
+                   Clicked="CardFrontName_Clicked"/>
+
+            <Label x:Name="CardBackName"
+                   Text="{Binding}"
+                   TextColor="DarkSlateGray"
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"
+                   FontSize="30"
+                   FontAttributes="Bold"
+                   HeightRequest="50" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
