--- a/FlashcardApp/FlashcardApp/PracticeDeckPage.xaml
+++ b/FlashcardApp/FlashcardApp/PracticeDeckPage.xaml
@@ -22,14 +22,24 @@
                    FontAttributes="Bold"
                    HeightRequest="50" />
 
-            <Button x:Name="CardFrontName"
+            
+
+            <Frame BorderColor="DarkSlateGray"
+                   Margin="10"
+                   WidthRequest="2">
+                <Label x:Name="CardFrontName"
                    Text="{Binding}"
                    TextColor="DarkSlateGray"
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"
                    FontSize="30"
                    FontAttributes="Bold"
-                   HeightRequest="50"
-                   Clicked="CardFrontName_Clicked"/>
+                   HeightRequest="200" />
+            </Frame>
 
+            <Frame BorderColor="DarkSlateGray"
+                   Margin="10"
+                   WidthRequest="2">
             <Label x:Name="CardBackName"
                    Text="{Binding}"
                    TextColor="DarkSlateGray"
@@ -37,7 +47,8 @@
                    VerticalTextAlignment="Center"
                    FontSize="30"
                    FontAttributes="Bold"
-                   HeightRequest="50" />
+                   HeightRequest="200" />
+            </Frame>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
